--- a/css_js/style.css
+++ b/css_js/style.css
@@ -7,8 +7,6 @@ body:before {
     content: "";
     display: block;
     position: fixed;
-    left: 0;
-    top: 0;
     width: 100%;
     height: 100%;
     z-index: -10;
@@ -19,20 +17,19 @@ body:before {
     background-size: cover;
 }
 
-.background-1 {
+.parallax-effect {
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+}
+
+.background-1 {
     height: 100vh;
 }
 
 .background-2 {
     height: 40vh;
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
     background-image: url("../img/computer.jpg");
     min-height: 40%;
 }
@@ -69,7 +66,7 @@ h2 {
     margin-left: 5%;
 }
 
-.white-on-black{
+.white-on-black {
     color: white;
     background-color: #282E34;
 }
@@ -79,7 +76,7 @@ h2 {
     margin: 5vh auto auto;
 }
 
-.page-header img{
+.page-header img {
     max-height: 100%;
     width: auto;
     position: absolute;
@@ -123,7 +120,7 @@ ul {
     padding: 0;
 }
 
-strong .white-on-black{
+strong .white-on-black {
     color: white;
 }
 
