Modification of css and js files' tree structure Some minor graphical updates

--- a/css_js/css_files/experience.css
+++ b/css_js/css_files/experience.css
@@ -1,9 +1,9 @@
 #my-experience {
-    background-color: #282E34;
+    background-color: #34495e;
     vertical-align: middle;
-    color: darkgrey;
+    color: white;
     position: relative;
-    padding:50px;
+    padding: 50px;
 }
 
 #my-experience h1 {
