--- a/css_js/css_files/style.css
+++ b/css_js/css_files/style.css
@@ -78,8 +78,11 @@ ul {
     background-color: #ecf0f1;
 }
 
+.nav-link {
+    padding: 0;
+}
+
 .nav-link.active {
     background-color: #1abc9c;
     border-radius: 10px;
-    padding: 1%;
 }
